# fastapi-graphsql

./: README.md  docker-compose.dev.yaml
api/: pyproject.toml
api/api/: main.py
docker/db/docker-entrypoint-initdb.d/: 00_create_test_database.sql
